Fix overflow due to change in #wrap location

--- a/inst/templates/knitr_bootstrap.css
+++ b/inst/templates/knitr_bootstrap.css
@@ -1,5 +1,5 @@
 /* Knitr_bootstrap styles */
-#wrap .container-fluid {
+body > .container-fluid {
   overflow: hidden;
 }
 .toggle{
